Fix orderer width bug
Summary:
wrapping the orderer in an inline-block caused it's width to become too small
to contain more than one element. This hacky fix forces the width to be 480px
so that you can put some things in your orderer. Unfortunately, it still no
longer expands.

Test plan:
http://localhost:9000/test.html#content=%7B%22question%22%3A%7B%22content%22%3A%22**Count%20out%20%242%24%20flowers.**%5Cn%5Cn%5B%5B%E2%98%83%20orderer%201%5D%5D%5Cn%5Cn%5B%5B%E2%98%83%20input-number%201%5D%5D%22%2C%22widgets%22%3A%7B%22orderer%201%22%3A%7B%22type%22%3A%22orderer%22%2C%22graded%22%3Atrue%2C%22options%22%3A%7B%22options%22%3A%5B%7B%22content%22%3A%22!%5B%5D(https%3A%2F%2Fka-perseus-graphie.s3.amazonaws.com%2Fb7a6f30d245d186cf42961677ddafa118fef5fdd.png)%22%7D%5D%2C%22correctOptions%22%3A%5B%7B%22content%22%3A%22!%5B%5D(https%3A%2F%2Fka-perseus-graphie.s3.amazonaws.com%2Fb7a6f30d245d186cf42961677ddafa118fef5fdd.png)%22%7D%2C%7B%22content%22%3A%22!%5B%5D(https%3A%2F%2Fka-perseus-graphie.s3.amazonaws.com%2Fb7a6f30d245d186cf42961677ddafa118fef5fdd.png)%22%7D%5D%2C%22otherOptions%22%3A%5B%5D%2C%22height%22%3A%22auto%22%2C%22layout%22%3A%22horizontal%22%7D%7D%2C%22input-number%201%22%3A%7B%22type%22%3A%22input-number%22%2C%22graded%22%3Atrue%2C%22options%22%3A%7B%22value%22%3A%220%22%2C%22simplify%22%3A%22required%22%2C%22size%22%3A%22normal%22%2C%22inexact%22%3Afalse%2C%22maxError%22%3A0.1%2C%22answerType%22%3A%22number%22%7D%7D%7D%7D%2C%22answerArea%22%3A%7B%22type%22%3A%22multiple%22%2C%22options%22%3A%7B%22content%22%3A%22Drag%20cards%20into%20the%20box.%22%2C%22widgets%22%3A%7B%7D%7D%2C%22calculator%22%3Afalse%7D%2C%22hints%22%3A%5B%7B%22content%22%3A%22Count%20%241%2C%202%24.%20%20%5CnDrag%20a%20flower%20into%20the%20box%20for%20each%20number.%20%5Cn%5Cn!%5B%5D(https%3A%2F%2Fka-perseus-images.s3.amazonaws.com%2Fa46939f75555ec95235f021cea960e40bff2cbf5.jpg)%20%20%5Cn%24%5C%5Cqquad%5C%5C%3A%5C%5C%3A%5C%5C%3A%201%20%5C%5Cqquad%5C%5Cquad%5C%5C%3A%202%24%5Cn%22%2C%22wid

--- a/stylesheets/exercise-content-package/perseus.less
+++ b/stylesheets/exercise-content-package/perseus.less
@@ -9,6 +9,9 @@
 // Perseus-related variables
 @clueColor: #007AFF;
 
+// Dimensions
+@questionWidth: 480px;
+
 // Layer variables
 @zIndexScratchPad: 1;
 @zIndexAboveScratchpad: @zIndexScratchPad + 1;
@@ -511,6 +514,11 @@
 
 .orderer {
     position: relative;
+	// HACK (jack): The highlight inline-div around a horizontal
+	// orderer will squash this together unless we set a min-width.
+	// Ideally we'd like to let the width expand based on the size
+	// of it's container (maybe?)
+	min-width: @questionWidth;
 
     .draggable-box {
         padding: 13px;
